Feature/column ordering (#3)
* Updated ERRORS_README.md

* Added HTML output support and updated OMOP table specs to v5.2 as described in the EHR Ops website

* Added comments for test reporter and added new tests

--- a/resources/omop/measurement.json
+++ b/resources/omop/measurement.json
@@ -26,7 +26,7 @@
     {
         "type": "timestamp", 
         "name": "measurement_datetime", 
-        "mode": "nullable", 
+        "mode": "required",
         "description": "The date and time of the Measurement. Some database systems don't have a datatype of time. To accomodate all temporal analyses, datatype datetime can be used (combining measurement_date and measurement_time [forum discussion](http://forums.ohdsi.org/t/date-time-and-datetime-problem-and-the-world-of-hours-and-1day/314))"
     }, 
     {
